# StartupMentor

./: flake.nix  pyproject.toml
app/: .env  pyproject.toml
app/app/: SupabaseClient.py  main.py
pipeline/: .gitignore  README.md  SymenticSection.py  main.py  manual.txt  pyproject.toml  test_data.py
pipeline/.dagster/.telemetry/: id.yaml
pipeline/.dagster/history/: runs.db
pipeline/.dagster/history/runs/: 00e023af-01dd-4060-a9ed-ff65e8a2b7d9.db  069ec3ca-739e-429a-a448-edbbe4cac839.db  07ef6a28-cd40-40b1-869b-bcb184b53264.db  09de610b-f598-4c5b-b667-00d99bbf2f04.db  0a0f0232-acbd-470c-889d-263a5b0bf6a6.db  0a3d5ead-e3ae-4c86-ac43-b0dd2af706c3.db  0ac73440-68a8-4003-abb4-7b1b28de0ec5.db  0c77d3cb-0779-4171-b9e8-30e9b6964f61.db  0d280af6-32d0-4852-86b1-50160d938f65.db  101c73ca-fd0f-4dac-bbfd-6e66fbd74b83.db  102bb9a0-9b8d-4e53-981d-60c678776e32.db  1486f8ff-64c1-46e8-b1b4-2b3f68c57f4f.db  1586263e-73c0-4e87-b252-3f3addbd0a1d.db  1e00089f-00c4-4856-832a-0633743a26c8.db  1f8bc3ac-7967-4fa7-8ba8-9a9c737ba0a2.db  232eff4b-330e-43df-b217-48593205a891.db  2571d56f-6306-4b2e-a739-c849c5917e58.db  25eef8f4-03f9-4c61-8866-f9cd5b037db3.db  2777eb07-1f1e-44d5-8243-fd16f0fe157a.db  27f77810-c190-4f62-8f81-12daad7e6693.db  29c9a324-5a3c-4a69-9711-f6edbc535f93.db  2d245999-23bf-4717-9e41-de732ff08f21.db  2d64b60c-526c-4533-914e-585c7395fa4b.db  2e526e00-fba1-4777-8c48-434aad895237.db  2f65cc94-6b00-4c82-a8a2-c5b9bf63400a.db  3038f9d8-c0a9-4502-a3ec-bafab6af3ef4.db  319f9cbc-3765-4157-8749-aa0dcce9640d.db  32546912-ccc2-4b9b-8dc5-33573beb0aa9.db  327fe8e2-83ce-483c-814d-6bf10f49030b.db  32f02115-cd5f-4d55-95db-27b2550eb0bf.db  3306bad0-812f-4b94-9c8a-4879f7462469.db  3355c699-dd62-4179-ac5f-1d28b0dee694.db  33678d70-5532-4ed2-aeb5-27473009362d.db  35e34f27-9096-459f-ad5d-9ccb24d4b6c8.db  368df979-787f-423e-8c7d-eede9e5dae53.db  39176867-1db2-4769-b8dd-fa4be3eee3b5.db  3baa077e-80b2-4783-bb9d-0c123076b980.db  437df5d2-29bf-4867-a89c-9238180c5b13.db  46e57b4a-c3c0-45b3-9a70-85d6fd2574b7.db  46ee29ee-6b67-43c3-ae16-530f02df7886.db  (+109 more)
pipeline/.dagster/schedules/: schedules.db
pipeline/.dagster/storage/: chunk_blog_content  chunked_blog_docs  combined_and_cleaned_docs  fetched_blog_content  filtered_links  library_links  manual_articles  sorted_links  video_content
pipeline/.dagster/storage/00e023af-01dd-4060-a9ed-ff65e8a2b7d9/compute_logs/: afzjmzky.err  dbgobtlv.err  iwfbaeum.err  jqvmuhws.err  kfdenozi.err  (+4 more)
pipeline/chunker/: DocumentChunker.py  SemanticSection.py  clean_document.py  combine_sentences.py  embeddings.py  similarity.py
pipeline/pipeline/: SupabasePipeline.py  SupabaseStreamlinedPipeline.py  __init__.py  assets.py  blog_scraper.py  data_utils.py  file_utils.py  test.html  utils.py  video_scraper.py
server/: pyproject.toml
server/server/: Agent.py  crew.py  embeddigs.py  firstResponse.py  kg.py  main.py  query_rewrite.py  server.py  summarize_data.py  supabase_utils.py  tools.py  types.py  utils.py
(+251 files in other folders)
