[tool.poetry]
name = "startup"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.7"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.3"
pyright = "^1.1.333"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

