[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Szymon Zmyslony <szymonzmyslony@MacBook-Pro-3.local>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
openai = "^1.11.1"
supabase = "^2.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
