[tool.poetry]
name = "pipeline"
version = "0.1.0"
description = ""
authors = ["Your Name <szymon.zmyslony@gmail.com>"]

[tool.dagster]
module_name = "pipeline"


[tool.poetry.dependencies]
python = "3.11.7"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
youtube-transcript-api = "^0.6.2"
tiktoken = "^0.5.2"
openai = "^1.9.0"
dagster = "^1.6.2"
dagster-webserver = "^1.6.2"
lxml = "^5.1.0"
markdown = "^3.5.2"
supabase = "^2.3.4"
numpy = "^1.26.4"
scipy = "^1.12.0"
pandas = "^2.2.0"


[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"