[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Szymon Zmyslony <szymonzmyslony@MacBook-Pro-3.local>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
openai = "^1.12.0"
uvicorn = {extras = ["standard"], version = "^0.27.0.post1"}
instructor = "^0.5.2"
supabase = "^2.3.4"
graphviz = "^0.20.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
